--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,11 @@
-body {
-    background: firebrick;
-}
+@import "variables.css"; 
+@import "body.css";
+@import "navbar.css";
+@import "header.css";
+@import "project.css";
+@import "about.css";
+@import "contact.css";
+@import "footer.css";
+
+/*this is nothing more but the HUB that brings all my other CSS Files together
+In HTML, im only importing 1 file !! Keeps it simple.*/
