--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,9 +1,9 @@
-#nav-content {
+/* #nav-content {
     margin-left: 80%;
 }
 #listStyle {
     margin-left: 75%;
-}
+} */
 
 #nav-style {
     background-color:rgba(0,0,0,0.468)!important;
@@ -45,7 +45,7 @@ nav li a:hover{
 }
 
 .navbar {
-    position: relative;
+    position: fixed;
     display: flex;
     padding: .5rem 1 rem;
 }
