--- a/css/variables.css
+++ b/css/variables.css
@@ -12,4 +12,5 @@
     --font-one: 'Roboto Condensed', sans-serif;
     --font-two: 'Orbitron', sans-serif;
     --font-three: 'Yrsa', serif;
+    --font-four: 'Monoton', cursive;
 }
