--- a/css/footer.css
+++ b/css/footer.css
@@ -12,8 +12,10 @@ section{
 	width:35px;
 	height:35px;
     border: aqua 12px solid;
-	border-radius:35px;
-	margin:0 auto;
+    border-radius:12px;
+    margin:0 auto;
+    outline-style: dashed;
+    outline-color:white;
 	position:relative;
 	-webkit-transition: all 1s ease;
     -moz-transition: all 1s ease;
